--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign up</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="odin-photo">
       <div class="logo-text">
-        <h1><img src="./assets/odin-lined.png" alt="odin-logo"/>ODIN</h1>
+        <h1><img src="./assets/odin-lined.png" alt="odin-logo" />ODIN</h1>
       </div>
       <p>
         Photo by
